<resources>
    <string name="app_name">Tapadoo Test</string>
    <string name="navigation_drawer_open"> Open navigation drawer </string>
    <string name="navigation_drawer_close"> Close navigation drawer </string>
    <string name="HomeLabel">Home</string>
    <string name="ArabicLabel">عربى</string>
    <string name="EnglishLabel">English</string>
    <string name="EngLabel">Eng</string>
    <string name="DurationLabel">Duration (In Minutes)</string>
    <string name="PreviousDeliveredMealsLabel">Previous Delivered Meals</string>
    <string name="PreviousNotDeliveredMealsLabel">Previous Not Delivered Meals</string>
    <string name="TodayLabel">Today</string>
    <string name="ShareMsgLabel">aaa is available at Cells App. View more details using below link.</string>
    <string name="RatingLabel">Rating</string>
    <string name="ExperienceLabel">Experience</string>
    <string name="ConsultTypeLabel">Consult Type</string>
    <string name="UpcomingMealsLabel">Upcoming Meals</string>
    <string name="MealEditedByYouLabel">Meal Edited By You</string>
    <string name="MealEditedByCalorieTeamLabel">Meal Edited By Calorie Team</string>
    <string name="LatestLabel">Latest</string>
    <string name="DateLabel">Date</string>
    <string name="DateTimeLabel">Date &amp; Time</string>
    <string name="DaysLabel">Days</string>
    <string name="HoursLabel">Hours</string>
    <string name="MinLabel">Min</string>
    <string name="SecLabel">Sec</string>
    <string name="LatestProductsLabel">Latest Products</string>
    <string name="MoreLabel">More</string>
    <string name="ProductsLabel">Products</string>
    <string name="ProgressLabel">Progress</string>
    <string name="FoodMenuLabel">Food Menu</string>
    <string name="ForWomenLabel">For Women</string>
    <string name="FATLabel">FAT</string>
    <string name="CMLabel">CM</string>
    <string name="CARBLabel">CARB</string>
    <string name="PROLabel">PRO</string>
    <string name="FIERBLabel">FIBER</string>
    <string name="KCALLabel">KCAL</string>
    <string name="AllLabel">All</string>
    <string name="AlDuhaimGlobalLabel"><b>AL-DUHAIM AUTO</b>\nAl-Duhaim Global for Auto-Trade</string>
    <string name="RenewLabel">Renew</string>
    <string name="RenewSubscriptionLabel">Renew Subscription</string>
    <string name="MyAddressesLabel">My Addresses</string>
    <string name="MyAppointmentLabel">My Appointment</string>
    <string name="ProductLabel">Product</string>
    <string name="NoteLabel">*Based on sizes differs</string>
    <string name="StartLabel">Starting From: </string>
    <string name="Start">Start</string>
    <string name="AddToCartLabel">Add to Cart</string>
    <string name="AskForMeasurementLabel">Ask for Measurement</string>
    <string name="ShareLabel">Share using:</string>
    <string name="AddToFavLabel">Add to fav.</string>
    <string name="AddToLabel">Add to</string>
    <string name="AvailableColorsLabel">Available Colors</string>
    <string name="RelatedProductsLabel">Related Products</string>
    <string name="KGLabel">Kg</string>
    <string name="KD">KWD</string>
    <string name="MealsLabel">Meals</string>
    <string name="MealDetailsLabel">Meal Details</string>
    <string name="OffersLabel">Offers</string>
    <string name="Message">Message</string>
    <string name="SentLabel">Sent successfully.</string>
    <string name="MessageSentLabel">Message sent successfully.</string>
    <string name="AppointmentRequestSentLabel">Thank you for booking appointment. We shall contact you at the earliest for confirmation.</string>
    <string name="MyAccountLabel">My Account</string>
    <string name="AccountLabel">Account</string>
    <string name="EditProfileLabel">Edit Profile</string>
    <string name="MyProfileLabel">My Profile</string>
    <string name="OrdersLabel">Orders</string>
    <string name="DoctorsLabel">Doctors</string>
    <string name="WalletLabel">Wallet</string>
    <string name="MyReportsLabel">My Reports</string>
    <string name="OrdersContainsItemsLabel">Order contains aaa other items</string>
    <string name="OrdersContainsItemLabel">Order contains aaa other item</string>
    <string name="SelectLocationLabel">Select Location</string>
    <string name="AddressesLabel">Addresses</string>
    <string name="FavoritesLabel">My Favorites</string>
    <string name="ContractsLabel">My Contracts</string>
    <string name="LogoutLabel">Logout</string>
    <string name="AboutUSLabel">About Us</string>
    <string name="BranchesLabel">Branches</string>
    <string name="EventsLabel">Events</string>
    <string name="CareersLabel">Careers</string>
    <string name="UserNameLabel">User Name</string>
    <string name="PasswordLabel">Password</string>
    <string name="LoginLabel">Login</string>
    <string name="MakeAppointmentLabel">Make appointment</string>
    <string name="LoginLabelUnderline"><u>Login</u></string>
    <string name="LocationLabel">Location</string>
    <string name="RegisterLabel">Register</string>
    <string name="RequestLabel">Request</string>
    <string name="RequestPayoutLabel">Request payout</string>
    <string name="RequestAppointmentLabel">Request Appointment</string>
    <string name="RequestFollowupLabel">Request for followup</string>
    <string name="PreviewLabel">Preview</string>
    <string name="ReviewLabel">Review</string>
    <string name="ReviewsLabel">Reviews</string>
    <string name="SeeAllReviewLabel">See All Review</string>
    <string name="BiographyLabel">Biography</string>
    <string name="PreviousOrdersLabel">Previous Orders</string>
    <string name="OrderingBeautyServicesLabel">Ordering beauty services online</string>
    <string name="LastNameLabel">Last Name</string>
    <string name="CodeLabel">Code</string>
    <string name="WriteYourOpinionLabel">Write your opinion about dish here..</string>
    <string name="TermsCondition">With registration, I agree to terms and conditions.</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="DateOfBirthLabel">Date Of Birth</string>
    <string name="FirstNameLabel">First Name</string>
    <string name="DeliveryNotSupport">Delivery doesn\'t support this area</string>
    <string name="RegisterNowLabel">Register Now</string>
    <string name="ForgetLabel">Forgot Password?</string>
    <string name="ForgetPasswordLabel">Forgot Password</string>
    <string name="OldPasswordLabel">Old Password</string>
    <string name="NewPasswordLabel">New Password</string>
    <string name="ChangePassword">Change Password</string>
    <string name="WorkLabel">Work</string>
    <string name="WorkingDaysLabel">Working Days</string>
    <string name="WorkLocationLabel">Work Location</string>
    <string name="NameLabel">Name</string>
    <string name="ContinueGuest">Continue as Guest</string>
    <string name="GuestLabel">Guest</string>
    <string name="NewsletterLabel">Newsletter</string>
    <string name="ResetPasswordLabel">RESET PASSWORD</string>
    <string name="FieldMissing">Field with (*) is missing.</string>
    <string name="EmailLabel">Email</string>
    <string name="CountryLabel">Country</string>
    <string name="MobileLabel">Mobile</string>
    <string name="SearchLabel">Search</string>
    <string name="SearchHereLabel">Search here .. </string>
    <string name="SuggestionsLabel">Suggestions</string>
    <string name="ComplaintsLabel">Complaints</string>
    <string name="CompletedLabel">Completed</string>
    <string name="ContactUsLabel">Contact Us</string>
    <string name="ContactLabel">Contact Details</string>
    <string name="PhotosLabel">Photo</string>
    <string name="SearchMinimumLength">Search term minimum length is 3 characters</string>
    <string name="DeleteThisNotification1Label">Are you sure you want to delete?</string>
    <string name="DeleteThisNotificationLabel">Are you sure you want to delete this notification ?</string>
    <string name="AddThisMealLabel">Are you sure you want to add \"aaa\" in menu?</string>
    <string name="UpdateThisMealLabel">Are you sure you want to update \"aaa\" from today\'s menu?</string>
    <string name="DeleteThisMealLabel">Are you sure you want to remove \"aaa\" from today\'s menu?</string>
    <string name="AreYouSureYouWantToLogout1Label">Are you sure you want to logout from your account?</string>
    <string name="AreYouSureYouWantToLogoutLabel">Are you sure you want to logout ?</string>
    <string name="Yes">Yes</string>
    <string name="YearLabel">Year</string>
    <string name="PregnantLabel">Pregnant</string>
    <string name="SelectConsultationLabel">Select type of consultation</string>
    <string name="PrescriptionLabel">Prescription</string>
    <string name="YourPrescriptionLabel">Your Prescription</string>
    <string name="LabReportsLabel">Lab Reports</string>
    <string name="LactatingLabel">Lactating</string>
    <string name="OkLabel">Ok</string>
    <string name="No">No</string>
    <string name="DataMissing1">Please select below required fields.</string>
    <string name="ProductAddedWishlistLabel">The product has been added to your WishList</string>
    <string name="ReachedMaxLimitLabel">You have reached max limit of adding address which is aaa</string>
    <string name="AddressSuccessfullyUpdatedLabel">Address successfully updated for the selected dates.</string>
    <string name="MealSuccessfullyPostponedLabel">Meal successfully postponed for the selected dates.</string>
    <string name="FillAllFields">Please fill all fields</string>
    <string name="WriteNoteLabel">Please write a note for answered question</string>
    <string name="AnswerAllQuestionsLabel">Please answer all questions</string>
    <string name="HomeScreenChanged">Your home screen has been changed successfully.</string>
    <string name="HomeScreenRemoved">This page removed as Home Screen of the app successfully.</string>
    <string name="RemoveLastRecipeLabel">Can\'t remove last recipe in the day</string>
    <string name="NoMealsAvailable">No meals available</string>
    <string name="SelectDatePostponeLabel">Please select date for postpone</string>
    <string name="UpdateDeliveryLabel">Are you sure you want to update delivery to \"aaa\"?</string>
    <string name="SelectDateAddressLabel">Please select date for updating address</string>
    <string name="SubscriptionRenewed">Subscription successfully renewed</string>
    <string name="OperationFailed">Operation Failed</string>
    <string name="NewSubscriptionMessage">Thank you for the new subscription, We will contact you at the earliest for the further process.</string>
    <string name="RenewSubscriptionMessage">Subscription renewed successfully</string>
    <string name="OverlapingErrorLabel">There is active subscription for the upcoming dates and hence new subscription can\'t be created. Please try again after some days.</string>
    <string name="StreetNameMissingLabel">New street name missing</string>
    <string name="AddressAlreadyExistLabel">Address with same type already exist</string>
    <string name="NoMoreQuantitiesLabel">No more quantities available.</string>
    <string name="FixedQuantityLabel">Fixed quantity</string>
    <string name="IssueLabel">Issue</string>
    <string name="DishIsAvailableLabel">One of your favourite dish is available for add. You can add them.</string>
    <string name="EmailEmpty">Email for this customer is empty</string>
    <string name="NoValidSubscriptionDayLabel">There is no valid caloriePackage for the selected day</string>
    <string name="ErrorLabel">Error</string>
    <string name="UpdateLabel">Update</string>
    <string name="UpdateDeliveryAddressLabel">Update Delivery Address</string>
    <string name="TermsAndConditions">Terms &amp; Conditions</string>
    <string name="PrivacyPolicyLabel">Privacy policy</string>
    <string name="FAQ">FAQ</string>
    <string name="MyWalletLabel">My Wallet</string>
</resources>